recursion.cons.occurrences.Occurrences.scala.error
Erreur de compilation :
Occurrences:14: error: not found: value occurrence
      return (1+occurrence(l.tail, v))
                ^Occurrences:20: error: not found: value occurrence
      return occurrence(l.tail, v)
             ^